<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dataspeed_dbw_gateway</name>
  <version>2.0.1</version>
  <description>
    A multiplexer and demultiplexer between common dbw messages and platform specific dbw messages.
  </description>

  <license>BSD</license>
  <author email="rmaupin@dataspeedinc.com">Robert Maupin</author>
  <maintainer email="rmaupin@dataspeedinc.com">Robert Maupin</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>dbw_fca_msgs</depend>
  <depend>dbw_ford_msgs</depend>
  <depend>dbw_polaris_msgs</depend>
  <depend>dataspeed_dbw_common</depend>
  <depend>dataspeed_dbw_msgs</depend>

  <!-- For Testing Mostly -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
