<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dbw_fca</name>
  <version>2.1.9</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Chrysler Pacifica DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dbw_fca_can</exec_depend>
  <exec_depend>dbw_fca_description</exec_depend>
  <exec_depend>dbw_fca_joystick_demo</exec_depend>
  <exec_depend>dbw_fca_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
