<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ds_dbw</name>
  <version>2.2.2</version>
  <description>
    Interface to the Dataspeed Inc. Drive-By-Wire kits
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ds_dbw_msgs</exec_depend>
  <exec_depend>ds_dbw_can</exec_depend>
  <exec_depend>ds_dbw_joystick_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>